@@ -1256,3 +1256,4 @@ INSERT INTO engagements SET code='A', nom='Membre du conseil d''administration',
 INSERT INTO engagements SET code='E', nom='Membre du comité d''éducation à la santé et à la citoyenneté', description='Membre du comité d''éducation à la santé et à la citoyenneté', type='', conseil_de_classe='', ConcerneEleve='', SaisieScol='yes';
 INSERT INTO engagements SET code='S', nom='Membre de l''association sportive', description='Membre de l''association sportive', type='', conseil_de_classe='', ConcerneEleve='yes', SaisieScol='yes';
 INSERT INTO droits SET id='/mod_engagements/saisie_engagements_user.php', administrateur='V', professeur='F', cpe='V', scolarite='V', eleve='F', responsable='F', secours='F', autre='F', description='Saisie des engagements pour un utilisateur', statut='';
+INSERT INTO droits SET id='/mod_lsl/index.php', administrateur='V', professeur='F', cpe='F', scolarite='F', eleve='F', responsable='F', secours='F', autre='F', description='Index du module LSL', statut='';
