@@ -1247,6 +1247,18 @@ autre='F',
 description='Saisie des engagements pour un utilisateur',
 statut='';";
 
+$tab_req[] = "INSERT INTO droits SET id='/mod_lsl/index.php',
+administrateur='V',
+professeur='F',
+cpe='F',
+scolarite='F',
+eleve='F',
+responsable='F',
+secours='F',
+autre='F',
+description='Index du module LSL',
+statut='';";
+
 //$tab_req[] = "";
 
 $test1 = mysqli_num_rows(mysqli_query($GLOBALS["mysqli"], "SHOW COLUMNS FROM droits LIKE 'responsable'"));
