@@ -21,6 +21,9 @@ Gestion:
 Engagements:
 - Ajout d'un module engagements (délégué de classe, membre du C.A.,...)
 
+Livret Scolaire Lycée:
+- Ajout d'une ébauche de module.
+
 
 Gepi-1.6.5 (14/06/2014)
 ===========================
